--- a/swagger/auth-routes.yaml
+++ b/swagger/auth-routes.yaml
@@ -238,6 +238,46 @@
       404:
         description: User not found
 
+/api/v1/auth/select-role:
+  post:
+    tags:
+      - Authentication
+    summary: Select existing role
+    description: Select from user's existing roles
+    security:
+      - BearerAuth: []
+    requestBody:
+      required: true
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - role
+            properties:
+              role:
+                type: string
+                enum: [MENTOR, FOUNDER, INVESTOR]
+                example: "FOUNDER"
+    responses:
+      200:
+        description: Role selected successfully
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                success:
+                  type: boolean
+                  example: true
+                message:
+                  type: string
+                  example: "Role selected successfully"
+      400:
+        description: Invalid role
+      404:
+        description: Role not found or User not found
+
 components:
   securitySchemes:
     BearerAuth:
